Update setup_utils.sh